# grafana-ai-agent

./: .gitignore  Makefile  README.md  docker-compose.dev.yml
.github/workflows/: ci.yml
backend/: .env.example  .pre-commit-config.yaml  Dockerfile  pyproject.toml
backend/app/: __init__.py
backend/app/agents/: __init__.py  models.py  tools.py
backend/app/llm/: __init__.py  client.py
backend/app/tools/: __init__.py  code_tools.py  grafana_auth.py  infra_tools.py  promql_templates.py
backend/scripts/: examples.py
backend/src/: __init__.py  config.py  main.py
backend/src/api/: __init__.py  _sse.py  agent.py  entities.py  examples.py  grafana.py  health.py  llm.py  report.py  router.py  service_graph.py
backend/src/models/: __init__.py  entity.py  example.py  requests.py  responses.py  service_graph.py
backend/src/services/: __init__.py  agent_tools.py  compactor.py  entity_store.py  grafana.py  grafana_auth.py  investigation_store.py  mcp_client.py  mcp_react_agent.py  ollama.py  prompt_builder.py  react_agent.py  service_graph_store.py  session_store.py  tools.py
backend/src/services/llm/: anthropic.py  base.py  factory.py  ollama.py  openai.py
backend/src/services/rag/: embedder.py  retriever.py  store.py
backend/src/utils/: __init__.py  logging.py
backend/tests/: __init__.py  conftest.py  test_agent.py  test_agent_tools.py  test_code_tools.py  test_config.py  test_grafana_auth.py  test_health.py  test_infra_tools.py  test_models.py  test_ollama_client.py  test_services_smoke.py
backend/tests/fixtures/sample_repo/: config.py  requirements.txt
backend/tests/fixtures/sample_repo/api/: __init__.py  app.py  handlers.py
backend/tests/fixtures/sample_repo/models/: user.py
backend/tests/fixtures/sample_repo/utils/: file_ops.py
docs/: architecture.md
examples/: seed.json
frontend/: .env.example  .eslintrc.cjs  .prettierrc  Dockerfile  docker-entrypoint.sh  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.vue  main.ts
helm/: Chart.yaml  values.yaml
helm/grafana-ai-agent/: Chart.yaml  values.yaml
helm/templates/: _helpers.tpl  backend-configmap.yaml  backend-deployment.yaml  backend-secret.yaml  frontend-deployment.yaml  frontend-service.yaml  hpa.yaml  ingress.yaml
k8s/: ingress.yaml  namespace.yaml
k8s/backend/: configmap.yaml  deployment.yaml  secret.yaml  service.yaml
k8s/frontend/: deployment.yaml  service.yaml
scripts/: get-host-ip.sh  setup-local.sh
scripts/prometheus/: prometheus.yml
scripts/promtail/: config.yml
scripts/tempo/: tempo.yaml
(+70 files in other folders)
