[project]
name = "grafana-ai-agent-backend"
version = "0.1.0"
description = "Grafana AI Agent — FastAPI backend service"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.1",
    "structlog>=24.2.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.1",
    "anyio>=4.4.0",
    # Grafana auth
    "playwright>=1.43.0",
    "cryptography>=42.0.0",
    "azure-identity>=1.16.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.6",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.4",
    "mypy>=1.10.0",
    "pre-commit>=3.7.1",
    "types-python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "app"]

# ── Ruff ──────────────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "ANN", # flake8-annotations
]
ignore = [
    "ANN101", # missing type for self
    "ANN102", # missing type for cls
    "ANN401", # Dynamically typed expressions (Any)
]

[tool.ruff.lint.isort]
known-first-party = ["src", "app"]

# ── Mypy ──────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

# ── Pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = [
    "-v",
    "--tb=short",
    "--cov=src",
    "--cov=app",
    "--cov-report=term-missing",
    # Skip integration tests unless explicitly requested with -m integration
    "--deselect", "tests/test_grafana_auth.py::TestGrafanaAuthIntegration",
]
markers = [
    "integration: marks tests requiring a live external service (deselect with '-m \"not integration\"')",
]

[tool.coverage.run]
source = ["src", "app"]
omit = ["tests/*", "src/**/__init__.py", "app/**/__init__.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
